Name:                leveldbmgr
Version:             0.0.0.0
Synopsis:            CLI access to LevelDB
-- Description:         
Homepage:            https://github.com/NicolasT/leveldbmgr
Bug-Reports:         https://github.com/NicolasT/leveldbmgr/issues

Author:              Nicolas Trangez
Maintainer:          ikke@nicolast.be

License:             GPL-2
License-File:        LICENSE
Copyright:           (c) 2013, Nicolas Trangez

Category:            Database

Build-Type:          Simple
Cabal-Version:       >=1.8

Extra-Source-Files:  README.md

Source-Repository head
  Type:     git
  Location: git://github.com/NicolasT/leveldbmgr.git

Library
  Exposed-Modules:     Database.LevelDB.Format.Log
                     , Database.LevelDB.Format.WriteBatch
  Other-Modules:       Data.Digest.CRC32C

  Build-Depends:       base >= 4 && < 5
                     , transformers
                     , bytestring >= 0.10.2
                     , vector
                     , binary
                     , conduit
                     , QuickCheck

  Ghc-Options:         -Wall -rtsopts -funbox-strict-fields
  Ghc-Prof-Options:    -prof -caf-all -auto-all

  Hs-Source-Dirs:      src

Executable leveldbmgr
  Main-is:             leveldbmgr.hs

  Build-Depends:       base >= 4 && < 5
                     , bytestring
                     , mtl
                     , transformers
                     , resourcet
                     , optparse-applicative
                     , data-default
                     , leveldb-haskell

  Ghc-Options:         -Wall -rtsopts -funbox-strict-fields
  Ghc-Prof-Options:    -prof -caf-all -auto-all

  Hs-Source-Dirs:      bin

Test-Suite test-format
  Type:                exitcode-stdio-1.0

  Main-Is:             format.hs

  Build-Depends:       base >= 4 && < 5
                     , vector
                     , bytestring
                     , binary
                     , conduit
                     , HUnit
                     , QuickCheck
                     , test-framework
                     , test-framework-hunit
                     , test-framework-quickcheck2

  Ghc-Options:         -Wall -rtsopts -funbox-strict-fields
  Ghc-Prof-Options:    -prof -caf-all -auto-all

  Hs-Source-Dirs:      test
                     , src
